Fix horizontal scroll on components page

--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -36,6 +36,10 @@ h4 code {
   background-color: inherit;
 }
 
+.bs-docs-container {
+  overflow: hidden;
+}
+
 /* Outline button for use within the docs */
 .btn-outline {
   color: #223049;
